--- a/C0764112_MidTerm_MAD3115F2019-P1/Base.lproj/Main.storyboard
+++ b/C0764112_MidTerm_MAD3115F2019-P1/Base.lproj/Main.storyboard
@@ -68,7 +68,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Login" id="PrA-Hi-kD9"/>
+                    <navigationItem key="navigationItem" title="Login" id="PrA-Hi-kD9">
+                        <barButtonItem key="rightBarButtonItem" title="Sign Up" id="fIJ-Ma-miO">
+                            <color key="tintColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="btnLogin" destination="imO-hU-3N9" id="hxE-OL-jg3"/>
                         <outlet property="btnRememberMe" destination="gTl-w8-ds6" id="9DC-D9-yEg"/>
